<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Ingresa tu correo</string>
    <string name="password">Contraseña</string>
    <string name="error_password">Ingresa tu contraseña</string>
    <string name="error_email">Ingresa un correo</string>
    <string name="error_first_name">Ingresa tu nombre</string>
    <string name="error_last_name">Ingresa tu apellido</string>
    <string name="button_text_sign_in">Iniciar</string>
    <string name="hint_first_name">Nombre</string>
    <string name="txt_title_register">Registrate</string>
    <string name="hint_last_name">Apellido</string>
    <string name="txt_title_add_nota">Nota</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_text_register">Registrar</string>
    <string name="button_text_accept">Aceptar</string>
    <string name="button_text_cancel">Cancelar</string>
    <string name="hint_title">Titulo</string>
    <string name="hint_note">Nota...</string>
    <string name="txt_title_sign_in">Iniciar sesion</string>
</resources>